<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/OuterLayReg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".RegisterStation"
    android:background="@color/white"
    >

        <LinearLayout
            android:id="@+id/InnerLayReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            tools:ignore="MissingConstraints"
            >

            <TextView
                android:id="@+id/regMenuLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:text="@string/registerStation"
                android:textSize="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/orange1"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/regImg"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/img_content_login"
                android:src="@drawable/login" />

            <EditText
                android:id="@+id/regStationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:drawablePadding="4dp"
                android:textSize="18dp"
                android:hint="@string/hint_station_name"
                android:textColorHint="@color/orangetint"
                android:drawableLeft="@drawable/station_name"
                android:drawableTint="@color/orangetint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/regStationAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:drawablePadding="4dp"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/orangetint"
                android:drawableLeft="@drawable/station_address"
                android:drawableTint="@color/orangetint"
                android:hint="@string/hint_station_address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/regStationEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:drawablePadding="4dp"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/orangetint"
                android:drawableLeft="@drawable/station_email"
                android:drawableTint="@color/orangetint"
                android:hint="@string/hint_station_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/regStationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:drawablePadding="4dp"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/orangetint"
                android:drawableLeft="@drawable/password"
                android:drawableTint="@color/orangetint"
                android:hint="@string/hint_station_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/regStationRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:drawablePadding="4dp"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/orangetint"
                android:drawableLeft="@drawable/password"
                android:drawableTint="@color/orangetint"
                android:hint="@string/hint_station_re_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp" />

            <Button
                android:id="@+id/regStationButton"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:text="Register"
                tools:ignore="DuplicateSpeakableTextCheck"
                android:backgroundTintMode="add"
                android:backgroundTint="@color/orange1"
                android:textStyle="bold"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/text_have_account" />

        </LinearLayout>

</LinearLayout>