<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".RegisterVehicle">


    <ScrollView
        android:id="@+id/RegScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/InnerLayReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/regMenuLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/registerVehicle"
                android:textColor="@color/orange1"
                android:textSize="35dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/regImg"
                android:layout_width="match_parent"
                android:layout_height="280dp"

                android:contentDescription="@string/img_content_login"
                android:src="@drawable/vehicle_register" />

            <EditText
                android:id="@+id/regVehicleOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:drawableLeft="@drawable/username"
                android:drawablePadding="4dp"
                android:drawableTint="@color/orangetint"
                android:ems="10"
                android:hint="@string/hint_v_owner_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/orangetint"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/regVehicleNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/vehicle_number"
                android:drawablePadding="4dp"
                android:drawableTint="@color/orangetint"
                android:ems="10"
                android:hint="@string/hint_v_no"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/orangetint"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:drawableLeft="@drawable/station_name"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/orangetint"
                    android:ems="10"
                    android:padding="10dp"
                    android:text="@string/spinner_content_desc"
                    android:textColor="@color/orangetint"
                    android:textColorHint="@color/orangetint"
                    android:textSize="18dp" />

                <Spinner
                    android:id="@+id/spinnerFuelType"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/spinner_content_desc"
                    android:entries="@array/fuel_types" />
            </LinearLayout>


            <EditText
                android:id="@+id/regVOwnerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/station_email"
                android:drawablePadding="4sp"
                android:drawableTint="@color/orangetint"
                android:ems="10"
                android:hint="@string/hint_user_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/orangetint"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/regVOwnerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="4sp"
                android:drawableTint="@color/orangetint"
                android:ems="10"
                android:hint="@string/hint_user_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/orangetint"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/regVOwnerRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="4sp"
                android:drawableTint="@color/orangetint"
                android:ems="10"
                android:hint="@string/hint_user_repassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/orangetint"
                android:textSize="18dp" />

            <Button
                android:id="@+id/regVehicleButton"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/orange1"
                android:backgroundTintMode="add"
                android:text="Register"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/text_have_account" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>